--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,7 @@
-{deps, [{hackney, {git, "https://github.com/benoitc/hackney", {branch, "master"}}}]}.
+{deps, [
+    {hackney, {git, "https://github.com/benoitc/hackney", {branch, "master"}}},
+    {jsx, {git, "https://github.com/talentdeficit/jsx", {tag, "2.9.0"}}}
+]}.
 
 {edoc_opts, [{preprocess, true}]}.
 {erl_opts, [warn_unused_vars,
