fix: retry 3 times if hackney query error

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-    {hackney, {git, "https://github.com/benoitc/hackney", {branch, "master"}}},
+    {hackney, {git, "https://github.com/benoitc/hackney", {tag, "1.18.1"}}},
     {jsx, {git, "https://github.com/talentdeficit/jsx", {tag, "2.9.0"}}}
 ]}.
 
