upgrade: bump hackeny version

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-    {hackney, {git, "https://github.com/benoitc/hackney", {tag, "1.18.1"}}},
+    {hackney, {git, "https://github.com/emqx/hackney.git", {tag, "1.18.1-1"}}},
     {jsx, {git, "https://github.com/talentdeficit/jsx", {tag, "2.9.0"}}}
 ]}.
 
